Update GitHub OAuth and workflow configuration

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 
 <script>
 // CONFIG + JS unchanged
-const CLIENT_ID = "REPLACE_WITH_YOUR_GITHUB_OAUTH_CLIENT_ID";
-const REPO_OWNER = "REPLACE_WITH_OWNER";
-const REPO_NAME = "REPLACE_WITH_REPO";
-const WORKFLOW_FILE = "deploy.yml";
+const CLIENT_ID = "Ov23litpeMZNHZmtCmAr";
+const REPO_OWNER = "developer-etasens";
+const REPO_NAME = "cicd-reactjs";
+const WORKFLOW_FILE = "github_ip.yml";
 let ACCESS_TOKEN = null;
 
 async function login() {
