--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <script>
 // CONFIG + JS unchanged
-const CLIENT_ID = "Ov23litpeMZNHZmtCmAr";
+const CLIENT_ID = "Ov23li9CE0kBiaYjmryI";
 const REPO_OWNER = "developer-etasens";
 const REPO_NAME = "cicd-reactjs";
 const WORKFLOW_FILE = "github_ip.yml";
